--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "masonry-layout": "^4.2.2",
+    "vue-images-loaded": "^1.1.2",
     "vue-router": "^4.2.5",
     "vuetify": "^3.5.6"
   },
