--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@yeger/vue-masonry-wall": "^5.0.8",
+    "axios": "^1.6.8",
     "vue-images-loaded": "^1.1.2",
     "vue-router": "^4.2.5",
     "vuetify": "^3.5.6"
