--- a/diploma-front/package.json
+++ b/diploma-front/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "@yeger/vue-masonry-wall": "^5.0.8",
     "axios": "^1.6.8",
+    "vue": "^3.4.27",
     "vue-images-loaded": "^1.1.2",
     "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "^4.2.5",
